jupyter/ocp-api/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api
spec:
  selector:
    matchLabels:
      app: default
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  default
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  api
        image:  api:default
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name:  api-8080
        securityContext:
          allowPrivilegeEscalation: false
          runAsNonRoot: true
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
      restartPolicy: Always
