jupyter/ocp-api/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: api
  annotations:
    outer.openshift.io/cookie_name: "myc"
    haproxy.router.openshift.io/pod-concurrent-connections: "1"
    haproxy.router.openshift.io/http2: "true"
spec:
  path: /openapi
  to:
    kind: Service
    name: api
    weight: 100
  port:
    targetPort: api-5000
  tls:
    termination: edge
  wildcardPolicy: None
